  * apt-pkg/packagemanager.cc:
    - fix inconsistent clog/cout usage in the debug output

  [ David Kalnischkies ]
  * do not update po and pot files in the process of the build as this
    causes timestamp changes for the mo files which therefore can't
    be refcounted by dpkg for your M-A: same packages
    (Closes: #659333, LP: #924628)
  * debian/libapt-pkg4.12:
    - update symbols file
  * apt-pkg/packagemanager.cc:
    - recheck all dependencies if we changed a package in SmartConfigure
      as this could break an earlier dependency (LP: #940396)
    - recheck dependencies in SmartUnpack after a change, too
  * apt-pkg/acquire-worker.cc:
    - check return of write() as gcc recommends
  * apt-pkg/acquire.cc:
    - check return of write() as gcc recommends
  * apt-pkg/cdrom.cc:
    - check return of chdir() and link() as gcc recommends
  * apt-pkg/clean.cc:
    - check return of chdir() as gcc recommends
  * apt-pkg/contrib/netrc.cc:
    - check return of asprintf() as gcc recommends
  * methods/rred.cc:
    - check return of writev() as gcc recommends
  * methods/mirror.cc:
    - check return of chdir() as gcc recommends
  * apt-pkg/deb/dpkgpm.cc:
    - check return of write() a gcc recommends
  * apt-inst/deb/debfile.cc:
    - check return of chdir() as gcc recommends
  * apt-inst/deb/dpkgdb.cc:
    - check return of chdir() as gcc recommends
  * methods/makefile:
    - do not link rred against libz anymore as FileFd handles all
      this transparently now


 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 21 Mar 2012 18:50:23 +0100

apt (0.8.16~exp13) experimental; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/acquire-item.cc:
    - remove 'old' InRelease file if we can't get a new one before
      proceeding with Release.gpg to avoid the false impression of a still
      trusted repository by a (still present) old InRelease file.
      Thanks to Simon Ruderich for reporting this issue! (CVE-2012-0214)