@@ -1,1 +1,1 @@
-
+usr/share/locale/*/*/apt-utils.mo
