@@ -7,6 +7,7 @@ include ../buildlib/defaults.mak
 
 # The apt-ftparchive program
 ifdef BDBLIB
+APT_DOMAIN:=apt-utils
 PROGRAM=apt-ftparchive
 SLIBS = -lapt-pkg -lapt-inst $(BDBLIB) $(INTLLIBS)
 LIB_MAKES = apt-pkg/makefile apt-inst/makefile
